--- a/leshan-server-cf/pom.xml
+++ b/leshan-server-cf/pom.xml
@@ -45,6 +45,11 @@ Contributors:
             <groupId>org.eclipse.californium</groupId>
             <artifactId>scandium</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.bouncycastle</groupId>
+            <artifactId>bcprov-jdk15on</artifactId>
+            <version>1.52</version>
+        </dependency>
 
         <!-- test dependencies -->
         <dependency>
